Revision history for Acme-CPANAuthors-Israeli

0.0201  2015-05-30
        - Add LICENSE file.
        - Update the repository link to point to GitHub.

0.0200  2009-07-01
        - Added keywords and resources to the META.yml (via Build.PL).

0.0102  2008-09-14
        - Removed an author who did not want to be included.

0.0101  2008-09-14
        Added dependencies to the Build.PL.

0.01    2008-09-14
        First version, released on an unsuspecting world.
