@@ -1,14 +1,15 @@
 Build.PL
 Changes
-lib/Acme/CPANAuthors/Israeli.pm
 LICENSE
 MANIFEST
+META.json
+META.yml
+Makefile.PL
 README
+lib/Acme/CPANAuthors/Israeli.pm
 t/00-load.t
 t/01-misc.t
 t/cpan-changes.t
 t/pod-coverage.t
 t/pod.t
-Makefile.PL
-META.yml
-META.json
+t/style-trailing-space.t
