@@ -37,5 +37,5 @@ COPYRIGHT AND LICENCE
 
 Copyright (C) 2008 Shlomi Fish
 
-This program is released under the following license: MIT/X11 Licence. 
+This program is released under the following license: MIT/X11 Licence.
 
