@@ -3,6 +3,8 @@ Revision history for Acme-CPANAuthors-Israeli
 0.0201  2015-05-30
         - Add LICENSE file.
         - Update the repository link to point to GitHub.
+        - Convert "Changes" to CPAN::Changes.
+        - Add a test for trailing space and removed it.
 
 0.0200  2009-07-01
         - Added keywords and resources to the META.yml (via Build.PL).
